# python-pmc-singleton

./: .gitignore  CHANGELOG.md  setup.cfg  tox.ini
.github/workflows/: pythonpackage.yml
misc/: .init.rc  .run.rc  run_bash.sh  run_black.sh  run_flake8.sh  run_pip_install.sh  run_pip_install_req_dev.sh  run_pip_multi.sh  run_pipenv_init.sh  run_tests_pytest.sh  run_tests_setup.sh
requirements/: dev.in  dev.txt  test.in  test.txt
tests/: test_singleton.py
