[metadata]
name = pmc-singleton
maintainer = Andrei Kolotev
maintainer-email = kolotev@gmail.com
home-page = https://github.com/kolotev/python-pmc-singleton
; https://bitbucket.ncbi.nlm.nih.gov/projects/PMC/repos/python-pmc-singleton/browse
license = Public Domain
description = PMC package for singleton class decorator.
long_description = README.md
long_description_content_type = text/markdown
classifiers = [
        "Development Status :: 4 - Beta",
        "Topic :: Development",
        "License :: Public Doman License"]

[files]
packages_root = src
namespace_packages = pmc


[bdist_wheel]
universal = true
